--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,13 @@
 		"@babel/preset-react": "^7.27.1",
 		"@babel/preset-typescript": "^7.27.1",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+		"@svgr/webpack": "^8.1.0",
 		"@types/react": "^19.1.12",
 		"@types/react-dom": "^19.1.9",
 		"@typescript-eslint/eslint-plugin": "^8.42.0",
 		"@typescript-eslint/parser": "^8.42.0",
 		"babel-loader": "^10.0.0",
-		"css-loader": "^7.1.2",
+		"css-loader": "^6.11.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
