--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,15 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"allowJs": false,
+		"baseUrl": "./src",
+		"paths": {
+			"@components/*": ["components/*"],
+			"@store/*": ["store/*"],
+			"@api/*": ["api/*"],
+			"@styles/*": ["styles/*"],
+			"@assets/*": ["assets/*"],
+			"@types/*": ["types/*"]
+		},
 		"include": [
 			"src/**/*"
 		]
