--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,12 +19,13 @@
 		"allowJs": false,
 		"baseUrl": "./src",
 		"paths": {
-			"@components/*": ["components/*"],
-			"@store/*": ["store/*"],
 			"@api/*": ["api/*"],
-			"@styles/*": ["styles/*"],
 			"@assets/*": ["assets/*"],
-			"@types/*": ["types/*"]
+			"@components/*": ["components/*"],
+			"@pages/*": ["pages/*"],
+			"@store/*": ["store/*"],
+			"@styles/*": ["styles/*"],
+			"@types/*": ["types/*"],
 		},
 		"include": [
 			"src/**/*"
