--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   ],
   "scripts": {
     "start:client": "npm run start -w client",
-    "start:server": "npm run start -w server",
-    "start:all": "npm run start:client & npm run start:server"
+    "start:server": "npm run dev -w server",
+    "start:all": "npm-run-all start:server start:client"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2"
   }
 }
