--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
 	"version": "1.0.0",
 	"description": "Client for task manager",
 	"scripts": {
-		"start": "webpack serve --mode development",
-		"build": "webpack --mode production"
+		"dev": "cross-env NODE_ENV=development webpack serve --mode development",
+		"build": "cross-env NODE_ENV=production webpack --mode production",
+		"serve": "npx serve -s build"
 	},
 	"dependencies": {
 		"@fontsource/roboto": "^5.2.6",
@@ -28,6 +29,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.42.0",
 		"@typescript-eslint/parser": "^8.42.0",
 		"babel-loader": "^10.0.0",
+		"cross-env": "^10.0.0",
 		"css-loader": "^6.11.0",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
@@ -36,6 +38,7 @@
 		"react-refresh": "^0.17.0",
 		"sass": "^1.92.1",
 		"sass-loader": "^16.0.5",
+		"serve": "^14.2.5",
 		"style-loader": "^4.0.0",
 		"typescript": "^5.9.2",
 		"webpack": "^5.101.3",
