--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,6 +26,8 @@
 			"@store/*": ["store/*"],
 			"@styles/*": ["styles/*"],
 			"@types/*": ["types/*"],
+			"@utils/*": ["utils/*"],
+			"@HOC/*": ["HOC/*"],
 		},
 		"include": [
 			"src/**/*"
